erster wurd der CRUD Operationen

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
         },
         {
             "type": "java",
-            "name": "Launch It!",
+            "name": "Launch Debug",
             "request": "launch",
             "mainClass": "${file}",
             "console": "internalConsole"
